# star_query_rail_desktop

./: .gitignore  README.md  pyproject.toml
star_query_rail_client/: __init__.py  __main__.py  resorce_rc.py
star_query_rail_client/view/: login_window.py  ui_loginwindow.py
star_query_rail_desktop/: __main__.py  config.py
star_query_rail_desktop/clinet/: action.py  config.py  init.py  main.py
star_query_rail_desktop/resource/: resource.qrc
star_query_rail_desktop/view/: find_lostpsw.py  login_window.py  mainwindow.py  register_window.py  ui_find_lostpsw.py  ui_loginwindow.py  ui_registerwindow.py
