[project]
name = "star-query-rail-desktop"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "OPaimon", email = "paimoe@bupt.edu.cn" }
]
dependencies = [
    "pyqt5>=5.15.10",
    "pyqt-fluent-widgets>=1.5.7",
    "httpx>=0.25.0",
    "requests>=2.32.3",
    "simnet @ git+https://github.com/PaiGramTeam/SIMNet",
    "star-query-rail-client @ git+https://github.com/OPaimon/star_query_rail_client.git",
]
readme = "README.md"
requires-python = ">= 3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "ruff>=0.4.6",
    "pytest>=8.2.1",
    "mypy>=1.10.0",
    "rich>=13.7.1",
    "bandit>=1.7.8",
    "pre-commit>=3.7.1",
    "pytest-cov>=5.0.0",
    "pytest-html>=4.1.1",
    "coverage>=7.5.3",
    "coverage-badge>=1.1.1",
    "alembic>=1.13.1",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["star_query_rail_desktop"]


[tool.ruff]
# https://beta.ruff.rs/docs/settings/
# https://docs.astral.sh/ruff/configuration/
line-length = 88

# https://beta.ruff.rs/docs/rules/
lint.select = ["E", "W", "F", "I"]
lint.extend-select = ["I"]
lint.ignore = ["F401"]

# Exclude a variety of commonly ignored directories.
respect-gitignore = true
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

[tool.pytest.ini_options]
# https://docs.pytest.org/en/6.2.x/customize.html#pyproject-toml
# Directories that are not visited by pytest collector:
norecursedirs =["hooks", "*.egg", ".eggs", "dist", "build", "docs", ".tox", ".git", "__pycache__"]
doctest_optionflags = ["NUMBER", "NORMALIZE_WHITESPACE", "IGNORE_EXCEPTION_DETAIL"]

# Extra options:
addopts = [
  "--strict-markers",
  "--tb=short",
  "--doctest-modules",
  "--doctest-continue-on-failure",
]

[tool.coverage.run]
source = ["tests"]

[coverage.paths]
source = "star_query_rail"

[coverage.run]
branch = true

[coverage.report]
fail_under = 50
show_missing = true

